[tool.poetry]
name = "poker-core"
version = "0.1.0"
description = ""
authors = ["leonidsliusar <loslyusar@gmail.com>"]
readme = "README.md"
packages = [{include = "poker_core"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
uvloop = "^0.19.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
